Pi-hole: link with Unbound by default, change default port, bugfixes
- change Unbound external port
- fix password set on Pi-hole
- ask for password after installation
- install and use Unbound with Pi-hole by default
- improve Pi-hole documentation
- purge of Unbound and Pi-hole were not removing folders
- set link to webadmin from armbian-config
- move default web port of Pi-hole from 80 to 8011

--- a/tools/json/config.software.json
+++ b/tools/json/config.software.json
@@ -252,7 +252,7 @@
                         },
                         {
                             "id": "PIH001",
-                            "description": "Pi-hole DNS ad blocker",
+                            "description": "Pi-hole DNS ad blocker with Unbound support",
                             "short": "Pi-hole",
                             "module": "module_pi_hole",
                             "command": [
@@ -286,7 +286,7 @@
                             "id": "PIH004",
                             "description": "Pi-hole purge with data folder",
                             "command": [
-                                "module_pi_hole remove"
+                                "module_pi_hole purge"
                             ],
                             "status": "Stable",
                             "author": "@armbian",
@@ -318,7 +318,7 @@
                             "id": "UNB003",
                             "description": "Unbound purge with data folder",
                             "command": [
-                                "module_unbound remove"
+                                "module_unbound purge"
                             ],
                             "status": "Stable",
                             "author": "@armbian",
