OpenHab: move installation to Docker instance and change port

--- a/tests/openhab.conf
+++ b/tests/openhab.conf
@@ -1,10 +1,10 @@
-ENABLED=true
-RELEASE="bookworm"
+ENABLED=false
+RELEASE="noble"
 TESTNAME="OpenHab install"
 
 function testcase {(
 	set -e
-	./bin/armbian-config --api module_openhab remove
+	./bin/armbian-config --api module_docker purge
+	./bin/armbian-config --api module_openhab purge
 	./bin/armbian-config --api module_openhab install
-	systemctl is-active --quiet openhab.service
 )}
