--- a/tools/json/config.system.json
+++ b/tools/json/config.system.json
@@ -91,7 +91,8 @@
                     "sub": [
                         {
                             "id": "STO001",
-                            "description": "Install",
+                            "description": "Copy live OS to internal media",
+                            "short": "Install",
                             "module": "module_generic",
                             "command": [
                                 "armbian-install"
@@ -99,6 +100,18 @@
                             "status": "Preview",
                             "author": "@igorpecovnik",
                             "condition": "[[ -f /sbin/armbian-install || -f /usr/bin/armbian-install ]]"
+                        },
+                        {
+                            "id": "FLASH1",
+                            "description": "Download and flash to internal media",
+                            "short": "Download and flash",
+                            "module": "module_images",
+                            "command": [
+                                "module_images install"
+                            ],
+                            "status": "Preview",
+                            "author": "@igorpecovnik",
+                            "condition": "module_images status >/dev/null"
                         },
                         {
                             "id": "ROO001",
