--- a/.github/workflows/maintenance-unit-tests.yml
+++ b/.github/workflows/maintenance-unit-tests.yml
@@ -42,8 +42,16 @@ jobs:
 
           delimiter="$(openssl rand -hex 8)"
           echo "DEPLOYMENT_MATRIX<<${delimiter}" >> "${GITHUB_OUTPUT}"
-          # define OS variants where we can run test install
-          images=("bookworm" "jammy" "noble")
+          # define OS variants and their Docker images - use pre-built Armbian images
+          declare -A docker_images=(
+            ["bookworm"]="ghcr.io/armbian/repository-update:bookworm-amd64"
+            ["trixie"]="ghcr.io/armbian/repository-update:trixie-amd64"
+            ["forky"]="ghcr.io/armbian/repository-update:forky-amd64"
+            ["jammy"]="ghcr.io/armbian/repository-update:jammy-amd64"
+            ["noble"]="ghcr.io/armbian/repository-update:noble-amd64"
+            ["resolute"]="ghcr.io/armbian/repository-update:resolute-amd64"
+          )
+          images=("bookworm" "trixie" "forky" "jammy" "noble" "resolute")
           # read tests cases
           if [[ -n "${{ steps.changed-files.outputs.all_changed_files }}" ]]; then
               tests=($(grep -rwl ${{ steps.changed-files.outputs.all_changed_files }} -e "ENABLED=true" | cut -d":" -f1))
@@ -54,22 +62,22 @@ jobs:
           for i in "${tests[@]}"; do
              unset RELEASE
              source "${i}"
-             if [[ -z "${RELEASE}" ]]; then RELEASE=all; fi
+             if [[ -z "${RELEASE}" || "${RELEASE}" == "all" ]]; then RELEASE=all; fi
              # if we speficy releases, we need to loop docker images and use if there is a match
-             if [[ $RELEASE != all || -z $RELEASE ]]; then
+             if [[ $RELEASE != "all" ]]; then
                 for j in ${images[@]}; do
                     elements=($(echo $RELEASE | tr ':' "\n"))
                     testid=($(echo $i | cut -d"/" -f2 | cut -d"." -f1))
                     for SELECTED_RELEASE in "${elements[@]}"; do
                         if [[ $j == *"${SELECTED_RELEASE}"* ]]; then
-                           echo "{\"package\":\"${i}\",\"name\":\"${TESTNAME}\",\"os\":\"$j\",\"id\":\"$testid\"}"
+                           echo "{\"package\":\"${i}\",\"name\":\"${TESTNAME}\",\"os\":\"$j\",\"id\":\"$testid\",\"docker_image\":\"${docker_images[$j]}\"}"
                         fi
                     done
                 done
              else
                 for j in ${images[@]}; do
                     testid=($(echo $i | cut -d"/" -f2 | cut -d"." -f1))
-                    echo "{\"package\":\"${i}\",\"name\":\"${TESTNAME}\",\"os\":\"$j\",\"id\":\"$testid\"}"
+                    echo "{\"package\":\"${i}\",\"name\":\"${TESTNAME}\",\"os\":\"$j\",\"id\":\"$testid\",\"docker_image\":\"${docker_images[$j]}\"}"
                 done
              fi
           done | jq -s >> $GITHUB_OUTPUT
@@ -84,39 +92,39 @@ jobs:
       matrix:
         server: ${{ fromJSON(needs.prepare.outputs.DEPLOYMENT_MATRIX) }}
     name: "${{ matrix.server.name }} (${{ matrix.server.os }})"
-    runs-on: "${{ matrix.server.os }}"
+    #runs-on: "ubuntu-latest"
+    runs-on: [ docker, X64 ]
     timeout-minutes: 15
+    container:
+      image: ${{ matrix.server.docker_image }}
+      options: --privileged --security-opt seccomp=unconfined --tmpfs /tmp --tmpfs /run --tmpfs /run/lock
+      env:
+        DBUS_SESSION_BUS_ADDRESS: unix:path=/run/bus/bus.sock
     steps:
 
-      - name: "Install dependencies: fastfetch"
+      - name: "Initialize systemd"
         run: |
-          if lsof /var/lib/dpkg/lock >/dev/null 2>&1; then reboot; fi
-          sudo apt update
-          sudo dpkg --configure -a
-          sudo apt-get -y install fastfetch
+          apt-get update
+          apt-get install -y systemd-sysv wget
+          # Start systemd in the container
+          /sbin/init &
+          sleep 5
+          # Make the container appear as if systemd is PID 1
+          export SYSTEMD_IGNORE_CHROOT=1
+          export container=docker
+
+      - name: "Install dependencies"
+        run: |
+          apt-get install -y jq figlet curl ca-certificates tree procps lsb-release dialog sudo iproute2 whiptail debconf libtext-iconv-perl gpg xz-utils pv systemd
 
       - name: "Checkout Armbian configuration tool"
         uses: actions/checkout@v6
         with:
           path: 'config'
 
-      - name: "Run fastfecth"
+      - name: "Run unit test: ${{ matrix.server.name }} via ${{ matrix.server.package }}"
+        shell: bash
         run: |
-          fastfetch
-
-      - name: "Clean up Docker containers and images (if Docker is installed)"
-        run: |
-          if command -v docker >/dev/null 2>&1; then
-            docker ps -aq | xargs -r docker stop
-            docker ps -aq | xargs -r docker rm
-            docker images -aq | xargs -r docker rmi -f
-          else
-            echo "Docker not installed, skipping cleanup."
-          fi
-
-      - name: "Run unit test: ${{ matrix.server.name }} "
-        run: |
-
           export TERM=linux
           rm -rf test; mkdir -p test
           cd config
@@ -133,10 +141,6 @@ jobs:
 
           # Generate table entry
           echo "|${{ matrix.server.os }}| ${{ matrix.server.name }} | $((finish_time - start_time)) sec |" > ../test/${{ matrix.server.id }}-${{ matrix.server.os }}
-
-      - name: "Run fastfecth"
-        run: |
-          fastfetch
 
       - name: "Upload test summary"
         uses: actions/upload-artifact@v6
