docker: switch to distro packages and add lsio network checks
Switch Docker module from custom installation to distribution maintained packages:
- Use docker.io, docker-cli, docker-compose from distro repos
- Add riscv64 architecture support
- Create lsio network on install for LinuxServer.io containers
- Add comprehensive status check (Docker package + command + lsio network)
- Update JSON conditions to use unified status command
- Clean up Docker networks in CI workflow including lsio

This ensures Docker is installed from official distribution packages and
the lsio network is properly created and checked, which is critical for
container management operations.

--- a/.github/workflows/maintenance-unit-tests.yml
+++ b/.github/workflows/maintenance-unit-tests.yml
@@ -110,6 +110,7 @@ jobs:
             docker ps -aq | xargs -r docker stop
             docker ps -aq | xargs -r docker rm
             docker images -aq | xargs -r docker rmi -f
+            docker network ls -q | xargs -r docker network rm
           else
             echo "Docker not installed, skipping cleanup."
           fi
