Tests: adjust test parameters and broken modules

--- a/tests/uptimekuma.conf
+++ b/tests/uptimekuma.conf
@@ -3,8 +3,7 @@ RELEASE="noble"
 TESTNAME="Uptimekuma install"
 
 testcase() {(
-	set -e
-	./bin/armbian-config --api module_uptimekuma remove
+	./bin/armbian-config --api module_uptimekuma purge
 	./bin/armbian-config --api module_uptimekuma install
 	./bin/armbian-config --api module_uptimekuma status
 )}
