--- a/tests/homeassistant.conf
+++ b/tests/homeassistant.conf
@@ -1,10 +1,9 @@
-ENABLED=true
+ENABLED=false
 RELEASE="bookworm"
 TESTNAME="Home Assistant install"
 
 testcase() {(
-	set -e
-	./bin/armbian-config --api module_armbian_firmware repository rolling
+	./bin/armbian-config --api module_armbian_firmware repository stable
 	./bin/armbian-config --api module_haos install
 	./bin/armbian-config --api module_haos status
 )}
