--- a/tests/mariadb.conf
+++ b/tests/mariadb.conf
@@ -1,9 +1,9 @@
-ENABLED=false
-RELEASE="bookworm"
+ENABLED=true
+RELEASE="noble"
 TESTNAME="Mariadb install"
 
 testcase() {(
-	set -e
+	./bin/armbian-config --api module_mariadb purge
 	./bin/armbian-config --api module_mariadb install
 	./bin/armbian-config --api module_mariadb status
 )}
