--- a/.github/workflows/maintenance-unit-tests.yml
+++ b/.github/workflows/maintenance-unit-tests.yml
@@ -54,11 +54,17 @@ jobs:
           )
           images=("bookworm" "trixie" "forky" "jammy" "noble" "resolute")
           # read tests cases
-          if [[ "${{ steps.changed-files.outputs.any_changed }}" == "true" ]]; then
+          # Run all tests on schedule, workflow_dispatch on main, or when no files changed
+          run_all_tests=false
+          if [[ "${{ github.event_name }}" == "schedule" ]] || [[ "${{ github.ref_name }}" == "main" && "${{ github.event_name }}" == "workflow_dispatch" ]] || [[ "${{ steps.changed-files.outputs.any_changed }}" != "true" ]]; then
+              run_all_tests=true
+          fi
+
+          if [[ "$run_all_tests" == "true" ]]; then
+              tests=($(grep -rwl tests/*.conf -e "ENABLED=true" | cut -d":" -f1))
+          else
               mapfile -t changed_files <<< "${{ steps.changed-files.outputs.all_changed_files }}"
               tests=($(grep -rwl -e "ENABLED=true" -- "${changed_files[@]}" | cut -d":" -f1))
-          else
-              tests=($(grep -rwl tests/*.conf -e "ENABLED=true" | cut -d":" -f1))
           fi
           # loop enabled test cases
           for i in "${tests[@]}"; do
