refactor(wireguard): consolidate status checks and simplify module interface
- Replace separate 'image' and 'container' commands with unified 'status' command
- Update config conditions to use consolidated status checks
- Improve docker container/image detection with proper filtering
- Clean up code formatting and remove unnecessary command checks

Signed-off-by: Igor Pecovnik <igor@armbian.com>

--- a/tools/json/config.software.json
+++ b/tools/json/config.software.json
@@ -2231,7 +2231,7 @@
                             ],
                             "status": "Enabled",
                             "author": "@armbian",
-                            "condition": "! module_wireguard image"
+                            "condition": "! module_wireguard status"
                         },
                         {
                             "id": "WRG002",
@@ -2242,7 +2242,7 @@
                             ],
                             "status": "Enabled",
                             "author": "@armbian",
-                            "condition": "! module_wireguard servermode"
+                            "condition": "! module_wireguard status"
                         },
                         {
                             "id": "WRG003",
@@ -2253,7 +2253,7 @@
                             ],
                             "status": "Enabled",
                             "author": "@armbian",
-                            "condition": "module_wireguard image || module_wireguard container"
+                            "condition": "module_wireguard status"
                         },
                         {
                             "id": "WRG004",
@@ -2263,7 +2263,7 @@
                             ],
                             "status": "Enabled",
                             "author": "@armbian",
-                            "condition": "module_wireguard servermode"
+                            "condition": "module_wireguard status server"
                         },
                         {
                             "id": "WRG005",
@@ -2274,7 +2274,7 @@
                             ],
                             "status": "Enabled",
                             "author": "@armbian",
-                            "condition": "module_wireguard image"
+                            "condition": "module_wireguard status"
                         },
                         {
                             "id": "ZTR001",
