--- a/.github/workflows/maintenance-unit-tests.yml
+++ b/.github/workflows/maintenance-unit-tests.yml
@@ -63,7 +63,7 @@ jobs:
           if [[ "$run_all_tests" == "true" ]]; then
               tests=($(grep -rwl tests/*.conf -e "ENABLED=true" | cut -d":" -f1))
           else
-              mapfile -t changed_files <<< "${{ steps.changed-files.outputs.all_changed_files }}"
+              mapfile -t changed_files < <(printf '%s\n' "${{ steps.changed-files.outputs.all_changed_files }}")
               tests=($(grep -rwl -e "ENABLED=true" -- "${changed_files[@]}" | cut -d":" -f1))
           fi
           # loop enabled test cases
