--- a/.github/workflows/maintenance-unit-tests.yml
+++ b/.github/workflows/maintenance-unit-tests.yml
@@ -63,8 +63,14 @@ jobs:
           if [[ "$run_all_tests" == "true" ]]; then
               tests=($(grep -rwl tests/*.conf -e "ENABLED=true" | cut -d":" -f1))
           else
-              mapfile -t changed_files <<< "${{ steps.changed-files.outputs.all_changed_files }}"
-              tests=($(grep -rwl -e "ENABLED=true" -- "${changed_files[@]}" | cut -d":" -f1))
+              # Get changed test files using git to avoid parsing issues
+              changed_tests=($(cd "${GITHUB_WORKSPACE}" && git diff --name-only origin/main...HEAD | grep '^tests/.*\.conf$' || true))
+              if [[ ${#changed_tests[@]} -gt 0 ]]; then
+                  # Filter for ENABLED=true
+                  tests=($(grep -rwl -e "ENABLED=true" -- "${changed_tests[@]}" 2>/dev/null | cut -d":" -f1))
+              else
+                  tests=()
+              fi
           fi
           # loop enabled test cases
           for i in "${tests[@]}"; do
