Fix broken immicih container reading

--- a/tests/navidrome.conf
+++ b/tests/navidrome.conf
@@ -4,7 +4,7 @@ TESTNAME="Navidrome install"
 
 testcase() {(
 	set -e
-	./bin/armbian-config --api module_navidrome remove
+	./bin/armbian-config --api module_navidrome purge
 	./bin/armbian-config --api module_navidrome install
 	./bin/armbian-config --api module_navidrome status
 )}
