refactor(network): standardize modules and add hidden WiFi support
This commit includes:

1. Module Naming Standardization:
   - Renamed all network modules with module_ prefix for consistency
   - Updated function names and module_options arrays
   - Fixed all cross-module function references

2. Bug Fixes:
   - Fixed critical variable expansion bug (missing $ in ${SELECTED_BSSID})
   - Fixed environment variable typo (LC_ALL instead of lc_all)
   - Added proper quoting for variables in grep commands
   - Removed unused variables
   - Fixed syntax error with SSID length validation

3. Interface Filtering:
   - Added veth to exclusion patterns to filter container interfaces
   - Updated filter patterns across module_network_simple.sh and module_network_config.sh

4. Wireless Interface Improvements:
   - Added automatic interface enabling when selected
   - Implemented RF-kill handling for wireless adapters
   - Disable rfkill service to prevent reblocking on reboot

5. Hidden Network Support:
   - Added "Connect to hidden network" option in WiFi selection
   - Manual SSID entry with 32-character validation
   - Maintains backward compatibility with scanned networks

6. Configuration Updates:
   - Updated config.network.json with new function names
   - Updated config.system.json for qr_code references
   - Added file existence checks before YAML operations

7. Code Quality:
   - Added YAML file safety checks to prevent errors
   - Improved error handling throughout
   - Cleaned up development files (CLAUDE.md)

--- a/tools/json/config.system.json
+++ b/tools/json/config.system.json
@@ -373,7 +373,7 @@
                                 "pkg_installed qrencode || pkg_install qrencode",
                                 "sed -i \"s/^#\\?ChallengeResponseAuthentication.*/ChallengeResponseAuthentication yes/\" /etc/ssh/sshd_config",
                                 "sed -i $'/KbdInteractiveAuthentication/{iChallengeResponseAuthentication yes\\n:a;n;ba}' /etc/ssh/sshd_config || sed -n -i '/password updating/{p;:a;N;/@include common-password/!ba;s/.*\\n/auth required pam_google_authenticator.so nullok\\nauth required pam_permit.so\\n/};p' /etc/pam.d/sshd",
-                                "[ ! -f /root/.google_authenticator ] && qr_code generate",
+                                "[ ! -f /root/.google_authenticator ] && module_qr_code generate",
                                 "srv_restart ssh"
                             ],
                             "status": "Stable",
@@ -384,7 +384,7 @@
                             "id": "ACC009",
                             "description": "Generate new OTP authentication QR code",
                             "command": [
-                                "qr_code generate"
+                                "module_qr_code generate"
                             ],
                             "status": "Stable",
                             "author": "@igorpecovnik",
@@ -394,7 +394,7 @@
                             "id": "ACC010",
                             "description": "Show OTP authentication QR code",
                             "command": [
-                                "qr_code"
+                                "module_qr_code"
                             ],
                             "status": "Stable",
                             "author": "@igorpecovnik",
