refactor(system): standardize headers and ZFS modules with improved hardening
This commit consolidates improvements to system modules with better error
handling, idempotency, and user experience enhancements.

## Headers Module (install_headers.sh → module_install_headers.sh)

- Rename file to follow standard Armbian module naming convention
- Add comprehensive module metadata (maintainer, doc_link, group)
- Fix broken sed command for architecture suffix removal
- Add idempotency check to prevent re-installation
- Improve variable quoting and validation
- Add user feedback messages for better UX
- Fix help text formatting (convert tabs to spaces)
- Add proper exit codes and error handling
- Add DEBIAN_FRONTEND=noninteractive for DKMS license suppression

## ZFS Module (module_zfs.sh)

- Add comprehensive module metadata (maintainer, doc_link, group)
- Fix incorrect function calls (module_armbian_firmware → module_headers)
- Add idempotency check to prevent re-installation
- Improve status command to return proper exit codes
- Add user feedback messages for better UX
- Fix help text formatting (convert tabs to spaces)
- Add safety checks for environment variables
- Change exit codes to return codes for consistency
- Add dependency check for kernel headers module
- Suppress DKMS license prompt with non-interactive mode

## Package Functions Review

- Document package management abstraction layer behavior
- Identify error recovery patterns in pkg_install/pkg_remove
- Note conditional GUI progress support via debconf-apt-progress
- Review predicate function patterns in pkg_installed

Both modules now follow standard Armbian conventions with improved
reliability, better user feedback, and consistent error handling.

--- a/tools/json/config.system.json
+++ b/tools/json/config.system.json
@@ -28,21 +28,21 @@
                             "short": "Kernel Headers",
                             "module": "module_generic",
                             "command": [
-                                "module_armbian_firmware headers install"
+                                "module_headers install"
                             ],
                             "status": "Stable",
                             "author": "@igorpecovnik",
-                            "condition": "! module_armbian_firmware headers status"
+                            "condition": "! module_headers status"
                         },
                         {
                             "id": "HEAD02",
                             "description": "Remove Linux headers",
                             "command": [
-                                "module_armbian_firmware headers remove"
+                                "module_headers remove"
                             ],
                             "status": "Stable",
                             "author": "@igorpecovnik",
-                            "condition": "module_armbian_firmware headers status"
+                            "condition": "module_headers status"
                         },
                         {
                             "id": "DTO001",
