fix(software): correct stderr redirection placement in docker commands
Moves 2>/dev/null to immediately follow docker commands for proper error
suppression. Also fixes watchtower module conditions.

For docker container ls:
  $(docker container ls ... 2>/dev/null) || echo ""

For docker image ls with pipes:
  $(docker image ls ... 2>/dev/null | grep ... | awk ...) || echo ""

This ensures stderr is suppressed from docker commands themselves, not from
downstream pipe commands or the command substitution expression.

Affected 116 docker command instances across 47 modules.

--- a/tools/json/config.system.json
+++ b/tools/json/config.system.json
@@ -593,7 +593,7 @@
                             ],
                             "status": "Stable",
                             "author": "@armbian",
-                            "condition": "! module_watchtower status && pkg_installed docker-ce"
+                            "condition": "! module_watchtower status"
                         },
                         {
                             "id": "WTC002",
@@ -603,7 +603,7 @@
                             ],
                             "status": "Stable",
                             "author": "@armbian",
-                            "condition": "module_watchtower status && pkg_installed docker-ce"
+                            "condition": "module_watchtower status"
                         },
                         {
                             "id": "UNAT01",
